[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sys4enca"
authors = [
    {name = "Thomas Danckaert", email = "thomas.danckaert@vito.be"},
    {name = "Marcel Buchhorn", email = "marcel.buchhorn@vito.be"},
    {name = "Bruno Smets", email = "bruno.smets@vito.be"},
    {name = "Catherine Van Den Hoof", email = "catherine.vandenhoof@vito.be"}
]
description = "Natural Capital Accounting package"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["ecosystem", "accounting", "SEEA"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'GDAL>=3.1.0',
    'pandas',
    'matplotlib',
    'numpy',
    'geopandas',
    'rasterio',
    'richdem',
    'scikit-learn',
    'openpyxl',
    'Rtree',
    'pyshp',
    'pyyaml'
]
dynamic = ["version"]

[project.scripts]
enca = "enca.__main__:main"
bring2aoi = "enca.tools.bring2aoi:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
